# memoria

./: .gitignore  .goreleaser.yml  CLAUDE.md  Makefile  README.ja.md  README.md  go.mod  go.sum  mise.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml  test.yml
.serena/: project.yml
cmd/memoria/: main.go  main_test.go
docs/specs/: CLI.ja.md  HOOKS.ja.md  RETRIEVAL.ja.md  (+3 more)
hooks/: hooks.json
plans/: cozy-puzzling-lovelace.md  expressive-tickling-eclipse.md  federated-foraging-hennessy-agent-af516ab84cc7b1fd5.md  federated-foraging-hennessy.md  floating-soaring-stream-agent-a8336924dad47af63.md  floating-soaring-stream.md  floating-toasting-newt.md  memoria-m01-cli-skeleton.md  memoria-m02-config-system.md  memoria-m03-sqlite-schema.md  memoria-m04-job-queue.md  memoria-m05-stop-hook.md  memoria-m06-session-end-hook.md  memoria-m07-ingest-worker-lifecycle.md  memoria-m08-ingest-worker-loop.md  memoria-m09-embedding-worker.md  memoria-m10-embedding-integration.md  memoria-m11-ingest-with-embedding.md  memoria-m12-retrieval-hooks.md  memoria-m13-project-fingerprint.md  memoria-m14-sqlite-vec-upgrade.md  memoria-m15-release-packaging.md  memoria-roadmap.md  memory-list-get-id-issue.md  prancy-spinning-hippo.md  smooth-floating-hennessy.md  sunny-juggling-toucan.md  vivid-sparking-curry.md
python/: pyproject.toml  worker.py
python/app/: lifecycle.py  main.py  model.py  schemas.py
python/tests/: conftest.py  test_embed.py  test_health.py  test_lifecycle.py  test_model.py  test_schemas.py  test_worker.py
tmp/: e2e-test.sh
(+104 files in other folders)
